[gd_scene load_steps=19 format=3 uid="uid://djy1wboquur6k"]

[ext_resource type="Script" path="res://addons/ui_controls_combo/menu_combo/button.gd" id="1_0qrdn"]
[ext_resource type="Script" path="res://example/example_ui_controls_combo_menu_demo_setup.gd" id="1_xeur5"]
[ext_resource type="Texture2D" uid="uid://cat1xddfoflyo" path="res://icon.svg" id="3_g34h7"]
[ext_resource type="Script" path="res://addons/ui_controls_combo/menu_combo/switch.gd" id="4_3ww26"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_223a2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hwf6f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_attbj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_risis"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vtun7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ritl1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1m6vd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ptvmr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1a2ec"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.466181, 0.466181, 0.466181, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_td822"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s5mku"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2hfnu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dxvqn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sywxh"]

[node name="example_ui_controls_combo_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xeur5")

[node name="MENUcombo_Button3" type="Control" parent="." node_paths=PackedStringArray("node_button")]
layout_mode = 3
anchors_preset = 0
offset_left = 232.0
offset_top = 54.0
offset_right = 397.0
offset_bottom = 85.0
focus_mode = 2
mouse_filter = 2
script = ExtResource("1_0qrdn")
node_button = NodePath("Button")
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="MENUcombo_Button3"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_223a2")
text = "Independent Button"

[node name="MENUcombo_Button2" type="Control" parent="." node_paths=PackedStringArray("node_button")]
anchors_preset = 0
offset_left = 247.0
offset_top = 128.0
offset_right = 416.0
offset_bottom = 172.0
focus_mode = 2
mouse_filter = 2
script = ExtResource("1_0qrdn")
node_button = NodePath("MarginContainer/HBoxContainer/Button")
selection_margin = Vector4i(6, 4, 6, 4)
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="MENUcombo_Button2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="MENUcombo_Button2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TextureRect" type="TextureRect" parent="MENUcombo_Button2/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("3_g34h7")
expand_mode = 1

[node name="Button" type="Button" parent="MENUcombo_Button2/MarginContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_hwf6f")
text = "Styled Button"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MENUcombo_Button3" type="Control" parent="VBoxContainer" node_paths=PackedStringArray("node_button")]
custom_minimum_size = Vector2(144, 31)
layout_mode = 2
focus_mode = 2
mouse_filter = 2
script = ExtResource("1_0qrdn")
node_button = NodePath("Button")
sync_focusing = false
can_multi_select = true
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="VBoxContainer/MENUcombo_Button3"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_attbj")
toggle_mode = true
text = "I'm Toggle Button"

[node name="MENUcombo_Button4" type="Control" parent="VBoxContainer" node_paths=PackedStringArray("node_button")]
custom_minimum_size = Vector2(152, 31)
layout_mode = 2
focus_mode = 2
mouse_filter = 2
script = ExtResource("1_0qrdn")
node_button = NodePath("Button")
sync_focusing = false
can_multi_select = true
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="VBoxContainer/MENUcombo_Button4"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_risis")
text = "I'm Normal Button"

[node name="MENUcombo_Button5" type="Control" parent="VBoxContainer" node_paths=PackedStringArray("node_button")]
custom_minimum_size = Vector2(157, 31)
layout_mode = 2
focus_mode = 2
mouse_filter = 2
script = ExtResource("1_0qrdn")
node_button = NodePath("Button")
sync_focusing = false
can_multi_select = true
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="VBoxContainer/MENUcombo_Button5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_vtun7")
text = "Pressed Event Only"

[node name="MENUcombo_Button7" type="Control" parent="VBoxContainer" node_paths=PackedStringArray("node_button")]
custom_minimum_size = Vector2(165, 31)
layout_mode = 2
focus_mode = 2
mouse_filter = 2
script = ExtResource("1_0qrdn")
node_button = NodePath("Button")
sync_focusing = false
can_multi_select = true
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="VBoxContainer/MENUcombo_Button7"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ritl1")
text = "Released Event Only"

[node name="MENUcombo_Button6" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(151, 31)
layout_mode = 2
focus_mode = 2
mouse_filter = 2
script = ExtResource("1_0qrdn")
sync_focusing = false
can_multi_select = true
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="VBoxContainer/MENUcombo_Button6"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
tooltip_text = "Will NOT fire connected event because Forgot to Assign :p"
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_1m6vd")
text = "Forgot to Assign :p"

[node name="MENUcombo_Button" type="Control" parent="." node_paths=PackedStringArray("node_button")]
anchors_preset = 0
offset_left = 214.0
offset_top = 13.0
offset_right = 396.0
offset_bottom = 45.0
focus_mode = 2
mouse_filter = 2
script = ExtResource("1_0qrdn")
node_button = NodePath("HBoxContainer/TextureButton")
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="MENUcombo_Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureButton" type="TextureButton" parent="MENUcombo_Button/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_g34h7")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MENUcombo_Button/HBoxContainer"]
layout_mode = 2
text = "I'm Texture Button"

[node name="switch" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(480, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -480.0
offset_bottom = 176.0
grow_horizontal = 0

[node name="MENUcombo_Switch" type="Control" parent="switch" node_paths=PackedStringArray("node_switch", "node_true_button", "node_false_button")]
custom_minimum_size = Vector2(432, 31)
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_mode = 2
mouse_filter = 2
script = ExtResource("4_3ww26")
node_switch = NodePath("HBoxContainer/CheckButton")
node_true_button = NodePath("HBoxContainer/Button2")
node_false_button = NodePath("HBoxContainer/Button")
auto_update_custom_minimum_size = true
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="switch/MENUcombo_Switch"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="switch/MENUcombo_Switch/HBoxContainer"]
layout_mode = 2
text = "Switch w/ solution of left/right problem"

[node name="Button" type="Button" parent="switch/MENUcombo_Switch/HBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ptvmr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1a2ec")
toggle_mode = true
button_pressed = true
text = "OFF"

[node name="CheckButton" type="CheckButton" parent="switch/MENUcombo_Switch/HBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_td822")

[node name="Button2" type="Button" parent="switch/MENUcombo_Switch/HBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_s5mku")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1a2ec")
toggle_mode = true
text = "ON"

[node name="MENUcombo_Switch2" type="Control" parent="switch" node_paths=PackedStringArray("node_switch", "node_true_button", "node_false_button")]
custom_minimum_size = Vector2(442, 31)
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 2
mouse_filter = 2
script = ExtResource("4_3ww26")
node_switch = NodePath("HBoxContainer/CheckButton")
node_true_button = NodePath("HBoxContainer/Button2")
node_false_button = NodePath("HBoxContainer/Button")
auto_update_custom_minimum_size = true
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="switch/MENUcombo_Switch2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="switch/MENUcombo_Switch2/HBoxContainer"]
layout_mode = 2
text = "Switch w/o solution of left/right problem"

[node name="Button" type="Button" parent="switch/MENUcombo_Switch2/HBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_2hfnu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1a2ec")
toggle_mode = true
button_pressed = true
text = "OFF"

[node name="CheckButton" type="CheckButton" parent="switch/MENUcombo_Switch2/HBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_dxvqn")

[node name="Button2" type="Button" parent="switch/MENUcombo_Switch2/HBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_sywxh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1a2ec")
toggle_mode = true
text = "ON"

[node name="MENUcombo_Switch3" type="Control" parent="switch" node_paths=PackedStringArray("node_true_button", "node_false_button")]
custom_minimum_size = Vector2(297, 31)
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_mode = 2
mouse_filter = 2
script = ExtResource("4_3ww26")
node_true_button = NodePath("HBoxContainer/Button2")
node_false_button = NodePath("HBoxContainer/Button")
auto_update_custom_minimum_size = true
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="switch/MENUcombo_Switch3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="switch/MENUcombo_Switch3/HBoxContainer"]
layout_mode = 2
text = "Switch with only two button"

[node name="Button" type="Button" parent="switch/MENUcombo_Switch3/HBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_2hfnu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1a2ec")
toggle_mode = true
button_pressed = true
text = "OFF"

[node name="Button2" type="Button" parent="switch/MENUcombo_Switch3/HBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_sywxh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1a2ec")
toggle_mode = true
text = "ON"

[node name="MENUcombo_Switch4" type="Control" parent="switch" node_paths=PackedStringArray("node_switch")]
custom_minimum_size = Vector2(225, 24)
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_mode = 2
mouse_filter = 2
script = ExtResource("4_3ww26")
node_switch = NodePath("HBoxContainer/CheckButton")
auto_update_custom_minimum_size = true
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="switch/MENUcombo_Switch4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="switch/MENUcombo_Switch4/HBoxContainer"]
layout_mode = 2
text = "Switch w/o side button"

[node name="CheckButton" type="CheckButton" parent="switch/MENUcombo_Switch4/HBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_dxvqn")

[node name="MENUcombo_Switch5" type="Control" parent="switch" node_paths=PackedStringArray("node_switch", "node_true_button", "node_false_button")]
custom_minimum_size = Vector2(382, 31)
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_mode = 2
mouse_filter = 2
script = ExtResource("4_3ww26")
node_switch = NodePath("HBoxContainer/CheckButton")
node_true_button = NodePath("HBoxContainer/Button2")
node_false_button = NodePath("HBoxContainer/Button")
auto_update_custom_minimum_size = true
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="switch/MENUcombo_Switch5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="switch/MENUcombo_Switch5/HBoxContainer"]
layout_mode = 2
text = "Switch w/ non-toggle side button"

[node name="Button" type="Button" parent="switch/MENUcombo_Switch5/HBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ptvmr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1a2ec")
text = "OFF"

[node name="CheckButton" type="CheckButton" parent="switch/MENUcombo_Switch5/HBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_td822")

[node name="Button2" type="Button" parent="switch/MENUcombo_Switch5/HBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_s5mku")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1a2ec")
text = "ON"

[node name="MENUcombo_Switch6" type="Control" parent="switch" node_paths=PackedStringArray("node_true_button", "node_false_button")]
custom_minimum_size = Vector2(297, 31)
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_mode = 2
mouse_filter = 2
script = ExtResource("4_3ww26")
node_true_button = NodePath("HBoxContainer/Button2")
node_false_button = NodePath("HBoxContainer/Button")
auto_update_custom_minimum_size = true
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="switch/MENUcombo_Switch6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="switch/MENUcombo_Switch6/HBoxContainer"]
layout_mode = 2
text = "Switch with only two button"

[node name="Button" type="Button" parent="switch/MENUcombo_Switch6/HBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_2hfnu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1a2ec")
toggle_mode = true
button_pressed = true
text = "OFF"

[node name="Button2" type="Button" parent="switch/MENUcombo_Switch6/HBoxContainer"]
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_sywxh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1a2ec")
toggle_mode = true
text = "ON"

[connection signal="combo_signal_button_pressed" from="VBoxContainer/MENUcombo_Button3" to="." method="_on_men_ucombo_button_3_combo_signal_button_pressed"]
[connection signal="combo_signal_button_released" from="VBoxContainer/MENUcombo_Button3" to="." method="_on_men_ucombo_button_3_combo_signal_button_released"]
[connection signal="combo_signal_button_pressed" from="VBoxContainer/MENUcombo_Button4" to="." method="_on_men_ucombo_button_4_combo_signal_button_pressed"]
[connection signal="combo_signal_button_released" from="VBoxContainer/MENUcombo_Button4" to="." method="_on_men_ucombo_button_4_combo_signal_button_released"]
[connection signal="combo_signal_button_pressed" from="VBoxContainer/MENUcombo_Button5" to="." method="_on_men_ucombo_button_5_combo_signal_button_pressed"]
[connection signal="combo_signal_button_released" from="VBoxContainer/MENUcombo_Button7" to="." method="_on_men_ucombo_button_7_combo_signal_button_released"]
[connection signal="combo_signal_button_pressed" from="VBoxContainer/MENUcombo_Button6" to="." method="_on_men_ucombo_button_6_combo_signal_button_pressed"]
[connection signal="combo_signal_button_pressed" from="MENUcombo_Button" to="." method="_on_men_ucombo_button_combo_signal_button_pressed"]
[connection signal="combo_signal_button_pressed" from="switch/MENUcombo_Switch" to="." method="_on_men_ucombo_switch_combo_signal_button_pressed"]
